# Peridot-Soroban

./: .gitignore  .gitmodules  README.md  frontend-integration.md  margin.md
peridot-contracts/: .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  README.md  THREAT_MODEL.md  addresses.md  frontend-integration.md  peridot_smart_accounts_architecture.md
peridot-contracts/.stellar/contract-ids/: receipt-vault.json  test-usdc.json
peridot-contracts/contracts/jump-rate-model/: Cargo.toml
peridot-contracts/contracts/jump-rate-model/src/: lib.rs
peridot-contracts/contracts/jump-rate-model/test_snapshots/test/: model_rates.1.json
peridot-contracts/contracts/margin-controller/: Cargo.toml
peridot-contracts/contracts/margin-controller/src/: constants.rs  contract.rs  helpers.rs  lib.rs  storage.rs  test.rs
peridot-contracts/contracts/margin-controller/test_snapshots/test/: open_and_close_long.1.json  test_close_position_already_closed_panics.1.json  test_close_position_not_owner_panics.1.json  test_deposit_and_withdraw_collateral.1.json  test_get_health_factor.1.json  test_get_position_and_user_positions.1.json  test_initialize_twice_panics.1.json  test_multiple_positions.1.json  test_open_position_bad_leverage_panics.1.json  test_open_position_no_swap.1.json  test_open_position_no_swap_short.1.json  test_open_short_position.1.json  test_set_market_and_params.1.json  test_set_params_non_admin_panics.1.json
peridot-contracts/contracts/mocks/flash-loan-receiver/: Cargo.toml
peridot-contracts/contracts/mocks/flash-loan-receiver/src/: lib.rs
peridot-contracts/contracts/mocks/mock-lending-vault/: Cargo.toml
peridot-contracts/contracts/mocks/mock-token/: Cargo.toml
peridot-contracts/contracts/peridot-token/: Cargo.toml
peridot-contracts/contracts/peridot-token/src/: lib.rs  test.rs
peridot-contracts/contracts/receipt-vault/: Cargo.toml
peridot-contracts/contracts/receipt-vault/src/: constants.rs  contract.rs  events.rs  helpers.rs  lib.rs  storage.rs  test.rs
peridot-contracts/contracts/simple-comptroller/: Cargo.toml
peridot-contracts/contracts/simple-comptroller/src/: lib.rs  test.rs
peridot-contracts/contracts/simple-peridottroller/: Cargo.toml
peridot-contracts/contracts/simple-peridottroller/src/: constants.rs  contract.rs  events.rs  lib.rs  reflector.rs  storage.rs  test.rs
peridot-contracts/contracts/smart-account-basic/: Cargo.toml
peridot-contracts/contracts/smart-account-basic/src/: lib.rs  test.rs
peridot-contracts/contracts/smart-account-factory/: Cargo.toml
peridot-contracts/contracts/smart-account-factory/src/: lib.rs
peridot-contracts/contracts/swap-adapter/: Cargo.toml
peridot-contracts/contracts/swap-adapter/src/: lib.rs  test.rs
peridot-contracts/scripts/: build_wasm.sh  check_budget.sh  create_smart_account_testnet.sh  deploy_mainnet.sh  deploy_margin_controller_testnet.sh  deploy_sandbox.sh  deploy_smart_accounts_testnet.sh  deploy_testnet.sh  teardown_testnet.sh  ttl_keepalive_testnet.sh  verify_mainnet.sh  verify_smart_account_testnet.sh  verify_testnet.sh
(+123 files in other folders)
