[workspace]
resolver = "2"
members = [
  "contracts/receipt-vault",
  "contracts/simple-peridottroller",
  "contracts/jump-rate-model",
  "contracts/peridot-token",
  "contracts/swap-adapter",
  "contracts/margin-controller",
  "contracts/smart-account-basic",
  "contracts/smart-account-factory",
  "contracts/mocks/mock-token",
  "contracts/mocks/mock-lending-vault",
]

[workspace.dependencies]
soroban-sdk = "25.0.0"
stellar-tokens = { path = "../../openzeppelin-stellar-contracts/packages/tokens" }
stellar-contract-utils = { path = "../../openzeppelin-stellar-contracts/packages/contract-utils" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
