[package]
name = "receipt-vault"
version = "0.2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
stellar-tokens = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
simple-peridottroller = { path = "../simple-peridottroller" }
jump-rate-model = { path = "../jump-rate-model" }
mock-token = { path = "../mocks/mock-token" }
