[package]
name = "simple-peridottroller"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
receipt-vault = { path = "../receipt-vault" }
peridot-token = { path = "../peridot-token" }


